# ft232h-transceiver-rs

./: Cargo.toml  README.md
src/: logger.rs  main.rs  nrf24.rs
