[package]
name = "ft232h-nrf24l01-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libftd2xx = { version = "0.32" }
ftdi-embedded-hal = { version = "0.16.0", features = ["libftd2xx", "libftd2xx-static"] }
embedded-hal = { version = "=1.0.0-alpha.11" }
log4rs = { version = "1.2", features = ["console_appender", "pattern_encoder"] }
log = "0.4.19"
tokio = { version = "1.28", features = ["rt", "time"] }
nrf24 = { path = "./nrf24-rs", features = ["std"] }